<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="68dp"

            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/temporary"
            android:textColor="@color/red"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center_vertical"
            android:text="@string/film_dor" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:contentDescription="@string/image_description_film"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingLeft="10dp"
            android:paddingBottom="6dp"
            android:text="@string/film_times" />




        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/tell_time" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:gravity="center"
            android:text="@string/film_genre" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="12dp"
            android:background="#ffffff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/textViewIMDB"
            android:layout_width="match_parent"

            android:layout_height="35dp"
            android:text="@string/film_imdb" />

        <TextView
            android:id="@+id/textViewMPAA"
            android:layout_width="match_parent"

            android:layout_height="35dp"
            android:text="@string/film_mpaa" />

        <TextView
            android:id="@+id/textViewRUN"
            android:layout_width="match_parent"

            android:layout_height="35dp"
            android:text="@string/film_runtime" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/director" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actors" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:text="@string/description" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

    </LinearLayout>
</ScrollView>
